--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -40,6 +40,10 @@ body {
   white-space: nowrap;
 }
 
+.btn-sm {
+  min-width: 0 !important;
+}
+
 .btn-xlg {
   font-size: 1.5rem;
   padding: 0.75rem 5rem;
